--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,27 +1465,74 @@
     "material_costs_indexed = material_costs.set_index('material')\n",
     "combined = design_materials.join(material_costs_indexed, on='material')\n",
     "combined['cost'] = combined['quantity_per_bed'] * combined['unit_cost']\n",
-    "result = combined.groupby('design')['cost'].sum()\n",
+    "result = combined.groupby('design')['cost'].sum().to_frame()\n",
     "p7 = result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cost</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>design</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4' x 4' x 12\"</th>\n",
+       "      <td>137.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4' x 4' x 18\"</th>\n",
+       "      <td>160.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4' x 8' x 12\"</th>\n",
+       "      <td>188.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4' x 8' x 18\"</th>\n",
+       "      <td>226.92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "design\n",
-       "4' x 4' x 12\"    137.08\n",
-       "4' x 4' x 18\"    160.76\n",
-       "4' x 8' x 12\"    188.00\n",
-       "4' x 8' x 18\"    226.92\n",
-       "Name: cost, dtype: float64"
+       "                 cost\n",
+       "design               \n",
+       "4' x 4' x 12\"  137.08\n",
+       "4' x 4' x 18\"  160.76\n",
+       "4' x 8' x 12\"  188.00\n",
+       "4' x 8' x 18\"  226.92"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,28 +2015,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "females = penguins[penguins['Sex'] == 'FEMALE']\n",
-    "p11 = females.groupby([\"Species\"]).agg({'Culmen Length (mm)': 'mean'}).idxmax()"
+    "p11 = females.groupby(['Species']).agg({'Culmen Length (mm)': 'mean'})['Culmen Length (mm)'].idxmax()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Culmen Length (mm)    Chinstrap penguin (Pygoscelis antarctica)\n",
-       "dtype: object"
+       "'Chinstrap penguin (Pygoscelis antarctica)'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
